// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render external link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link d_inline-block c_link cursor_pointer trs-prop_color,_text-decoration-color trs-dur_normal trs-tmf_standard [&:link,_&:visited,_&:active]:td_none hover:c_link.hover hover:td_underline active:c_link.hover active:td_underline focusVisible:ring_2px_solid focusVisible:ring-c_focusRing focusVisible:ring-o_2px"
    href="https://test.com"
  />
</DocumentFragment>
`;

exports[`should render internal link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link d_inline-block c_link cursor_pointer trs-prop_color,_text-decoration-color trs-dur_normal trs-tmf_standard [&:link,_&:visited,_&:active]:td_none hover:c_link.hover hover:td_underline active:c_link.hover active:td_underline focusVisible:ring_2px_solid focusVisible:ring-c_focusRing focusVisible:ring-o_2px"
    data-discover="true"
    href="/a"
  />
</DocumentFragment>
`;

exports[`should render no-style link 1`] = `
<DocumentFragment>
  <a
    data-discover="true"
    href="/a"
  />
</DocumentFragment>
`;
